--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
-  "name": "portfolio-generator",
+  "name": "project",
   "version": "1.0.0",
-  "description": "A terminal application to dynamically display my portfolio of projects",
+  "description": "",
   "main": "app.js",
+  "directories": {
+    "lib": "lib"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./test/sample.js",
+    "start": "node app.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/clickity-clacking/portfolio-generator.git"
-  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/clickity-clacking/portfolio-generator/issues"
-  },
-  "homepage": "https://github.com/clickity-clacking/portfolio-generator#readme",
   "dependencies": {
-    "inquirer": "^8.2.2"
+    "inquirer": "^7.0.3"
   }
 }
